...
                        Text("Lichess").tag(1)
                            .accessibilityIdentifier("addStudy.tab.lichess")
                    }
                    Text("Examples").tag(2)
                        .accessibilityIdentifier("addStudy.tab.examples")
                }.pickerStyle(.segmented)
                .accessibilityIdentifier("addStudy.importPicker")
                    .padding(.horizontal)
                    .padding(.bottom)
            }
            .navigationTitle(Text("Add Study"))
            .environment(\.editMode, $editMode)
            .toolbar {
                Button(action:{
                    dismiss()
                }) {
                    Image(systemName: "xmark")
                }
                .accessibilityIdentifier("addStudy.closeButton")
            }
        }
    }
}

struct AddStudyView_Previews: PreviewProvider {
...
