...
                                                RoundedRectangle(cornerRadius: 10).opacity(0.4)
                                            }
                                            .shadow(radius: 5)
                                        }
                                }
                                .disabled(vm.currentExploreNode.children.isEmpty && vm.currentExploreNode.gameNode?.children.isEmpty ?? true)
                                .accessibilityIdentifier("explorer.forwardButton")
                            }
                            .padding(.horizontal)
                        }
                        .frame(height: 47)
                        .padding(.bottom,5)
                    }
...
                            Image(systemName: "chevron.up.chevron.down")
                        }
                        .padding(.vertical, 1)
                        .padding(.trailing, 5)
                    }
                    .disabled(database.gametrees.isEmpty ? true : false)
                    .accessibilityIdentifier("explorer.switchStudyButton")
                }
                ToolbarItem(placement: .navigationBarLeading) {
                    Button {
                        vm.userColor = vm.userColor.negotiated
                    } label: {
                        Image(systemName: "arrow.up.arrow.down")
...
